fixed bug of line chart not showing; set favicon and tab title; set initial values for dropdowns so radar chart shows on landing; added data loading spinner; refactored sidebars into components; editted and re-formatted sidebar texts to help users interprete data

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -15,7 +15,7 @@
 
 .side-bar {
     position: fixed; 
-    top: 130px;  
+    top: 150px;  
     right: 10px;  
     padding: 10px;
     z-index: 1000
